--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,4 +2,30 @@
 
 *{
     font-family: Nunito, Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+.container .card {
+    padding: 8px;
+}
+
+.container .card h6 {
+    color: #00897B;
+    font-weight: bold;
+}
+
+.score-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.logo img {
+    width: 100%;
+    height: auto;
+}
+
+.logo p {
+    margin-top: 4px;
+    font-size: medium;
 }
