--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,10 +23,16 @@
 
 .logo img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    max-height: 150px;
 }
 
 .logo p {
     margin-top: 4px;
     font-size: medium;
+}
+
+.container-match {
+    display: flex;
+    align-items: center;
 }
